--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <section>
      <h1>Effective Solutions for Your Business</h1>
-     <button type="button"><a href="">Order Service</a></button>
+     <button type="button"></button>
     </section>
     <section>
       <h3>Strategy</h3>
@@ -53,17 +53,17 @@
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="/stuffs+/img (1)2.jpg" width="264" height="260" alt="Tom Ford photo">
+          <img src="/img-2.jpg" width="264" height="260" alt="Tom Ford photo">
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="/stuffs+/img (2)2.jpg" width="264" height="260" alt="Camila Garcia photo">
+          <img src="/img-3.jpg" width="264" height="260" alt="Camila Garcia photo">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="/stuffs+/img (3)2.jpg" width="264" height="260" alt="Daniel Wilson photo">
+          <img src="/img-4.jpg" width="264" height="260" alt="Daniel Wilson photo">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
