--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="/stuffs+/img.2.jpg" width="264" height="260"  alt="Mark Guerrero photo">
+          <img src="/img.2.jpg" width="264" height="260"  alt="Mark Guerrero photo">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
