--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="/img.2.jpg" width="264" height="260"  alt="Mark Guerrero photo">
+          <img src="./img.2.jpg" width="264" height="260"  alt="Mark Guerrero photo">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="/img-2.jpg" width="264" height="260" alt="Tom Ford photo">
+          <img src="./img-2.jpg" width="264" height="260" alt="Tom Ford photo">
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="/img-3.jpg" width="264" height="260" alt="Camila Garcia photo">
+          <img src="./img-3.jpg" width="264" height="260" alt="Camila Garcia photo">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="/img-4.jpg" width="264" height="260" alt="Daniel Wilson photo">
+          <img src="./img-4.jpg" width="264" height="260" alt="Daniel Wilson photo">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
